force-app/main/default/objects/DA_Lending_Limits__c/DA_Lending_Limits__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DA Lending Limits</label>
</CustomObject>