force-app/main/default/objects/DA_Lending_Limits__c/fields/Approval_Max_DA2__c.field-meta.xml
<CustomField>
    <fullName>Approval_Max_DA2__c</fullName>
    <label>Approval Max DA2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>