force-app/main/default/objects/DA_Lending_Limits__c/fields/Approval_Min_DA1__c.field-meta.xml
<CustomField>
    <fullName>Approval_Min_DA1__c</fullName>
    <label>Approval Min DA1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>