force-app/main/default/objects/DA_Lending_Limits__c/fields/Approval_Min_DA3__c.field-meta.xml
<CustomField>
    <fullName>Approval_Min_DA3__c</fullName>
    <label>Approval Min DA3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>